# spline_reader_genie

./: CMakeLists.txt  spline.cxx  spline.h  test.cpp
